[package]
name = "cloner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
crossterm = "0.27.0"
dialoguer = "0.11.0"
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
termion = "2.0.3"
tokio = {version = "1.33.0", features = ["full"] }
